<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context="com.example.michael.utilitytools.MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/compass"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/compassBtn"
        app:layout_constraintRight_toRightOf="@+id/compassBtn"
        app:layout_constraintTop_toBottomOf="@+id/compassBtn"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/flashlightBtn"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:background="@drawable/flashlight"
        android:padding="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/maps"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/mapsBtn"
        app:layout_constraintRight_toRightOf="@+id/mapsBtn"
        app:layout_constraintTop_toBottomOf="@+id/mapsBtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stopwatch"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/stopwatchBtn"
        app:layout_constraintRight_toRightOf="@+id/stopwatchBtn"
        app:layout_constraintTop_toBottomOf="@+id/stopwatchBtn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/flash"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="@+id/flashlightBtn"
        app:layout_constraintRight_toRightOf="@+id/flashlightBtn"
        app:layout_constraintTop_toBottomOf="@+id/flashlightBtn" />

    <ImageButton
        android:id="@+id/compassBtn"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:background="@drawable/compass"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/mapsBtn"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:background="@drawable/maps"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/stopwatchBtn"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:background="@drawable/stopwatch"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitID"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="parent">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
